--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^18.0.6",
-    "express": "^4.21.2"
-  }
+ "name": "server",
+ "version": "1.0.0",
+ "description": "",
+ "main": "app.js",
+ "scripts": {
+  "start": "node app.js"
+ },
+ "author": "",
+ "license": "ISC",
+ "dependencies": {
+  "express": "^4.18.2",
+ }
 }
